# rust-playground

./: .env  .gitignore  Cargo.toml  Makefile  README.md
db/migrations/: 1674945459836_initial.sql
src/: database.rs  main.rs  models.rs
src/controllers/: user.rs
src/routes/: mod.rs  root.rs  users.rs
