[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.tokio]
version = "1.24.2"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-native-tls", "sqlite"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
